[package]
name = "writeahead"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
flume = "0.11.1"
futures = "0.3.31"
lazy_static = "1.5.0"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.2"
once_cell = "1.20.2"
tokio = { version = "1.42.0", features = ["full"] }
libc = "0.2.167"
