[package]
name = "writeahead"
version = "0.3.0"
edition = "2021"
description = "A partitioned write-ahead log (WAL) for building append-only, high-throughput durability systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danthegoodman1/WriteAhead"
readme = "README.md"
keywords = ["wal", "write-ahead-log", "durability", "log", "storage"]
categories = ["database-implementations", "filesystem"]
exclude = [".github/", ".devcontainer/", ".vscode/"]

[dependencies]
anyhow = "1.0.95"
flume = "0.11.1"
futures = "0.3.31"
thiserror = "2.0.9"
tracing = "0.1.41"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.19"
